// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Snapshot > should match snapshot for basic input with label 1`] = `
<div
  class="flex flex-col gap-2"
  data-headlessui-state=""
>
  <label
    class="font-medium text-text-primary text-sm"
    for="email"
  >
    Email
  </label>
  <input
    class="rounded-md border bg-surface-primary text-text-primary placeholder:text-text-muted focus:outline-none focus:ring-2 focus:ring-action-primary focus:border-transparent h-10 text-base px-4 animate-normal transition-colors duration-150"
    id="email"
    type="email"
  />
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`Input Snapshot > should match snapshot for disabled input 1`] = `
<div
  class="flex flex-col gap-2"
  data-headlessui-state=""
>
  <label
    class="font-medium text-text-primary text-sm"
    for="disabled"
  >
    Disabled
  </label>
  <input
    class="rounded-md border bg-surface-primary text-text-primary placeholder:text-text-muted focus:outline-none focus:ring-2 focus:ring-action-primary focus:border-transparent h-10 text-base px-4 animate-normal transition-colors duration-150 opacity-50 cursor-not-allowed pointer-events-none"
    disabled=""
    id="disabled"
    type="text"
  />
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`Input Snapshot > should match snapshot for input with different types > input-number 1`] = `
<div
  class="flex flex-col gap-2"
  data-headlessui-state=""
>
  <label
    class="font-medium text-text-primary text-sm"
    for="number"
  >
    Number
  </label>
  <input
    class="rounded-md border bg-surface-primary text-text-primary placeholder:text-text-muted focus:outline-none focus:ring-2 focus:ring-action-primary focus:border-transparent h-10 text-base px-4 animate-normal transition-colors duration-150"
    id="number"
    type="number"
  />
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`Input Snapshot > should match snapshot for input with different types > input-password 1`] = `
<div
  class="flex flex-col gap-2"
  data-headlessui-state=""
>
  <label
    class="font-medium text-text-primary text-sm"
    for="password"
  >
    Password
  </label>
  <input
    class="rounded-md border bg-surface-primary text-text-primary placeholder:text-text-muted focus:outline-none focus:ring-2 focus:ring-action-primary focus:border-transparent h-10 text-base px-4 animate-normal transition-colors duration-150"
    id="password"
    type="password"
  />
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`Input Snapshot > should match snapshot for input with different types > input-text 1`] = `
<div
  class="flex flex-col gap-2"
  data-headlessui-state=""
>
  <label
    class="font-medium text-text-primary text-sm"
    for="text"
  >
    Text
  </label>
  <input
    class="rounded-md border bg-surface-primary text-text-primary placeholder:text-text-muted focus:outline-none focus:ring-2 focus:ring-action-primary focus:border-transparent h-10 text-base px-4 animate-normal transition-colors duration-150"
    id="text"
    type="text"
  />
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`Input Snapshot > should match snapshot for input with error 1`] = `
<div
  class="flex flex-col gap-2"
  data-headlessui-state=""
>
  <label
    class="font-medium text-text-primary text-sm"
    for="email"
  >
    Email
  </label>
  <input
    class="rounded-md border bg-surface-primary text-text-primary placeholder:text-text-muted focus:outline-none focus:ring-2 focus:ring-action-primary focus:border-transparent h-10 text-base px-4 animate-normal transition-colors duration-150"
    id="email"
    type="email"
  />
  <p
    class="text-feedback-error text-sm"
    role="alert"
  >
    Please enter a valid email
  </p>
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`Input Snapshot > should match snapshot for textarea 1`] = `
<div
  class="flex flex-col gap-2"
  data-headlessui-state=""
>
  <label
    class="font-medium text-text-primary text-sm"
    for="description"
  >
    Description
  </label>
  <textarea
    class="rounded-md border bg-surface-primary text-text-primary placeholder:text-text-muted focus:outline-none focus:ring-2 focus:ring-action-primary focus:border-transparent min-h-24 py-2 resize-y text-base px-4 animate-normal transition-colors duration-150"
    id="description"
  />
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;
